# ModernCD

./: aliases.c  aliases.h  executor.c  executor.h  meson.build  moderncd.c
